Proceed to work on tests. Services tests are fully covered